--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,46 @@
-# Site settings
-title: Klise Theme # site title
-description: >- # site description
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
-lang: en-US # default lang
-timezone: Asia/Jakarta # set your timezone
-image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
-repo: https://github.com/piharpi/jekyll-klise # site repo [optional]
-mode: dark # default theme "dark" | "light"
+title: Miguel Viera's blog
+description: >-
+  This is my personal blog. This is an experiment 
+lang: en-GB
+timezone: Europe/Spain # set your timezone
+image: assets/img/ogp.png
+repo: https://github.com/mangelviera/mangelviera.github.io
+mode: dark
 
 # Profile settings
 author:
-  name: Jekyll Klisé # author name
-  bio: >- # tell to the world
-    The minimalist Jekyll theme, light and dark mode support, for running a personal site and blog, 
-    meet Klisé theme at <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
-  username: username # general username
-  github: github_username # github username
-  twitter: twitter_username # twitter username
-  facebook: facebook_username # facebook username
-  email: your-email@email.com # email adress
-  avatar: /assets/img/avatar.jpg # change with your own avatar
+  name: Miguel Ángel Viera
+  bio: >- 
+    I'm Miguel Viera, welcome to my personal blog. 
+    Hope you can find something useful.
+    Any feedback is welcome, you can know more about me on: <a href="/about">about</a> 
+  username: mangelviera
+  github: mangelviera
+  twitter: mangelviera
+  email: mangelviera93@me.com
+  avatar: /assets/img/avatar.jpg
 
-# URL settings
-url: "https://klise.now.sh" #
+url: "mangelviera.com"
 baseurl:
 permalink: /:title/
 google_analytics: # leave it blank if not wish
-fb_appid:
 
-# Collection setting
 collections:
   posts:
     output: true
 
-# Markdown settings
 markdown: kramdown
 highlighter: rouge
 kramdown:
   syntax_highlighter: rouge
 
-# Default front matter
 defaults:
   - scope:
       path: ""
     values:
       layout: post
-      comments: false
+      comments: true
 
-# Jekyll Compose default front matter
 jekyll_compose:
   post_default_front_matter:
     modified:
@@ -60,10 +52,9 @@ jekyll_compose:
     description:
 
 # Homepage limit posts
-number_of_posts: 5
+number_of_posts: 15
 
-# Build settings
-# theme: klise
+
 sass:
   style: compressed
 
@@ -85,7 +76,6 @@ exclude:
   - klise-*.gem
   - klise.gemspec
 
-# Plugins
 plugins:
   - jekyll-feed
   - jekyll-sitemap
